--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Title</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="xyskf/src/css/normalize.css">
+    <link rel="stylesheet" href="xyskf/src/css/main.css">
+    <link rel="stylesheet" href="xyskf/src/css/owl.carousel.css">
+    <link rel="stylesheet" href="xyskf/src/css/owl.theme.default.css">
 </head>
 <body>
 <!--[if lte IE 8]>
@@ -26,10 +26,10 @@
         </ul>
     </nav>
     <nav class="main">
-        <a href="#" class="brand"><img src="img/logo1.png" alt="回到首页"></a>
+        <a href="#" class="brand"><img src="xyskf/src/img/logo1.png" alt="回到首页"></a>
         <ul>
             <li><a href="index.html">首页</a></li>
-            <li><a href="Financialtycoon%20.html">理财大亨</a></li>
+            <li><a href="xyskf/src/Financialtycoon%20.html">理财大亨</a></li>
             <li><a href="#">投资好手</a></li>
             <li><a href="#">新手专区</a></li>
             <li><a href="#">安全保障</a></li>
@@ -58,23 +58,23 @@
         <div class="owl-carousel owl-theme">
              <div class="item">
                  <picture>
-                     <source srcset="img/ad001-l.png" media="(min-width:50em)">
-                     <source srcset="img/ad001-m.png" media="(min-width:30em)">
-                     <img src="img/ad001.png">
+                     <source srcset="xyskf/src/img/ad001-l.png" media="(min-width:50em)">
+                     <source srcset="xyskf/src/img/ad001-m.png" media="(min-width:30em)">
+                     <img src="xyskf/src/img/ad001.png">
                  </picture>
              </div>
              <div class="item">
                  <picture>
-                     <source srcset="img/ad002-l.png" media="(min-width:50em)">
-                     <source srcset="img/ad002-m.png" media="(min-width:30em)">
-                     <img src="img/ad002.png">
+                     <source srcset="xyskf/src/img/ad002-l.png" media="(min-width:50em)">
+                     <source srcset="xyskf/src/img/ad002-m.png" media="(min-width:30em)">
+                     <img src="xyskf/src/img/ad002.png">
                  </picture>
              </div>
              <div class="item">
                  <picture>
-                     <source srcset="img/ad003-l.png" media="(min-width:50em)">
-                     <source srcset="img/ad003-m.png" media="(min-width:30em)">
-                     <img src="img/ad003.png">
+                     <source srcset="xyskf/src/img/ad003-l.png" media="(min-width:50em)">
+                     <source srcset="xyskf/src/img/ad003-m.png" media="(min-width:30em)">
+                     <img src="xyskf/src/img/ad003.png">
                  </picture>
              </div>
         </div>
@@ -263,9 +263,9 @@
     </ul>
     <p><a href="http://www.wolfpack.top">baochuan</a> 版权所有@ 2015-2016</p>
 </footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/picturefill.js"></script>
-<script src="js/main.js"></script>
+<script src="xyskf/src/js/jquery.min.js"></script>
+<script src="xyskf/src/js/owl.carousel.min.js"></script>
+<script src="xyskf/src/js/picturefill.js"></script>
+<script src="xyskf/src/js/main.js"></script>
 </body>
 </html>
